	first resolved relative the working directory.

	* esxx.global is now available, and refers to the global
	scope.
	
	* The HTTP protocol handler now simply throws an ESXX.Response
	object if the HTTP status in load(), save(), append() or
	remove() is not 2xx.

	* Added IPS (OpenSolaris) package support, including SVC
	management script and manifest.

	* Added ESXX.Response methods: toString(), valueOf() and
	[from Java] getDefaultValue().

	* Added a dns: URI protocol handler, with LDAP URI-inspired
	query part.

	* The --no-handler option now takes a regex argument which
	is matched against SERVER_SOFTWARE. This makes it possible
	to use both Apache and Lighttpd with the same ESXX server
	by specifying "--no-handler=lighttpd.*" (which happens to
	be the default, so you don't actually have to specify it).

	* SOAP handlers can now match on SOAPAction and URI just like
	HTTP handlers.

	* XSLT stylesheets can now match on content type and URI,
	similar to HTTP and SOAP handlers.

	* Added a "javaURI" property to the URI class.

	* Added include files "json2.js" (from json.org) and
	"esxx/harmony.js", which adds a few useful functions from 
	the current ECMAScript 3.1 proposal.

0.9.20081101
	* Bug fixes as usual.

	* Upgraded to Rhino 1.7 release 2 PRERELEASE 2008 09 30, so we
	can extend abstract Java classes, which didn't work in 1.7r1.

	* esxx.document can now be modified.

	* Enabled a proper https URI implementation.

	* New esxx.wait signature: esxx.wait(mutex, timeout,
	function), which waits on mutex until function returns true.

	* The URI constructor now allows {...} syntax and a parameter
	object to automatically build proper URIs. The file URI class
	will also refuse URIs with encoded path separators in then.

	* The Request object now has requestURI, scriptURI, scriptName
	and pathInfo properties.

	* Request.query now only contains parameters from the
	URI. 'application/x-www-form-urlencoded'-encoded data is now
	in Request.message.
