@@ -1,39 +1,35 @@
 # -*- rpm-spec -*-
-Buildroot:      @CPACK_RPM_DIRECTORY@/@CPACK_PACKAGE_FILE_NAME@
-Summary:        @CPACK_RPM_PACKAGE_SUMMARY@
-Name:           @CPACK_RPM_PACKAGE_NAME@
-Version:        @CPACK_RPM_PACKAGE_VERSION@
+Buildroot:      %{_tmppath}/%{name}-%{version}-root
+Summary:        @CPACK_PACKAGE_DESCRIPTION_SUMMARY@
+Name:           @CPACK_PACKAGE_NAME@
+Version:        @CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@.@CPACK_PACKAGE_VERSION_PATCH@
 Release:        @CPACK_RPM_PACKAGE_RELEASE@
 License:        @CPACK_RPM_PACKAGE_LICENSE@
 Group:          @CPACK_RPM_PACKAGE_GROUP@
-Vendor:         @CPACK_RPM_PACKAGE_VENDOR@
+Vendor:         @CPACK_PACKAGE_VENDOR@
 BuildArch:	@CPACK_RPM_PACKAGE_ARCHITECTURE@
-
-#%define prefix @CMAKE_INSTALL_PREFIX@
-%define _rpmdir @CPACK_RPM_DIRECTORY@
-%define _rpmfilename @CPACK_RPM_FILE_NAME@
-%define _unpackaged_files_terminate_build 1
-%define _topdir @CPACK_RPM_DIRECTORY@
+Requires:	bash, sudo, java >= 1.6.0
+Source:		%{name}-%{version}.tar
 
 %description
-
 @PACKAGE_DESCRIPTION@
 
-# This is a shortcutted spec file
-# generated by CMake RPM generator
-# we skip the _prepn _build and _install
-# steps because CPack does that for us
-#%prep
+%prep
+rm -rf %{buildroot}
+%setup -q
 
-#%build
+%build
+./run_cmake.sh
   
 %install
-find @CPACK_RPM_DIRECTORY@/@CPACK_PACKAGE_FILE_NAME@ -type f -printf '/%%P\n' > @CPACK_PACKAGE_FILE_NAME@.files
+make install DESTDIR=%{buildroot}
+find %{buildroot} -type f -printf '/%%P\n' > %{name}-{%version}.files
 
 %clean
+rm -rf %{buildroot}
 
+%files -f %{name}-{%version}.files
 %defattr(-,root,root,-)
-%files -f @CPACK_PACKAGE_FILE_NAME@.files
 %config(noreplace) %{_sysconfdir}/sysconfig/esxx 
 %config(noreplace) %{_sysconfdir}/sysconfig/esxx-js
 %dir %attr(755,root,root) %{_docdir}/esxx
@@ -42,5 +38,5 @@ find @CPACK_RPM_DIRECTORY@/@CPACK_PACKAGE_FILE_NAME@ -type f -printf '/%%P\n' > 
 %dir %attr(755,root,root) %{_datadir}/esxx/site
 
 %changelog
-* Tue Aug 16 2007 Erk <eric.noulard@gmail.com>
-  Generated by CPack RPM Generator and associated macros
+* Sat Jan 31 2009 Martin Blom <martin@blom.org>
+  ESXX release.
